# Changelog
All notable changes to this project will be documented in this file.

## [ 0.0.8 ] - *
 - change s2ir status [@runzexia](https://github.com/kubesphere/s2ioperator/pull/65)
 - fix s2ib validate, add s2ir validate [https://github.com/kubesphere/s2ioperator/pull/66]

## [ 0.0.7 ] - 2019-03-25
 - add informer client [@runzexia](https://github.com/kubesphere/s2ioperator/pull/56)
 - add docker secret support [@runzexia](https://github.com/kubesphere/s2ioperator/pull/61)
 - add git secret support [@runzexia](https://github.com/kubesphere/s2ioperator/pull/62)

## [ 0.0.2 ] - 2019-03-15
### Added
 - Enable CI Test
 - Add Kubesphere CI Robot
 - Support deploy to workload after s2i done [@runzexia](https://github.com/kubesphere/s2ioperator/pull/30)
 -  Add logurl to each s2irun [@magicsong](https://github.com/kubesphere/s2ioperator/pull/21)

### Fixes
 - Randomize container name to prevent concurrent-building failing [@magicsong](https://github.com/kubesphere/s2ioperator/pull/47)
 - Fix the lastrunname in s2ibuilder [@magicsong](https://github.com/kubesphere/s2ioperator/pull/31)

 
## [ 0.0.1 ]  - 2019-03-01
### Added
- release v0.0.1